# project-fantastic5

./: README.md  project-main.py  pyproject.toml  requirements.txt
src/: addressbook.py  config.py  contact_handlers.py  decorators.py  fields.py  help.py  init.py  main.py  note.py  note_handlers.py  notebook.py  parser.py  persistence.py  project-main.py  record.py
